argocd/env/common/helm-apps/kube-prometheus-stack/manifests/prometheus-ingressroute.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`prometheus-k3s.local.lan`) 
    kind: Rule
    services:
    - name: kube-prometheus-stack-prometheus
      port: 9090
